--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of farr is to ...
+The goal of farr is to provide functions and small data sets as used in ["Accounting Research: An Introductory Course"](http://iangow.me/far_book/).
 
 ## Installation
 
@@ -33,27 +33,4 @@ And the development version from [GitHub](https://github.com/) with:
 ``` r
 # install.packages("devtools")
 devtools::install_github("iangow/farr")
-```
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(farr)
-library(dplyr, warn.conflicts = FALSE)
-library(DBI)
-
-pg <- dbConnect(RPostgres::Postgres(), bigint = "integer", sslmode='require')
-
-url <- "https://github.com/tidyverse/dbplyr/files/6239289/temp.RDS.zip"
-t <- tempfile(fileext = ".zip")
-download.file(url, t)
-temp <- as_tibble(readRDS(unzip(t)))
-unlink("temp.RDS")
-
-temp2 <- dbplyr::copy_inline(pg, temp)
-
-temp
-
-temp2
 ```
