--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of farr is to provide functions and small data sets as used in ["Accounting Research: An Introductory Course"](https://iangow.github.io/far_book/).
+The goal of farr is to provide functions and small data sets as used in ["Empirical Research in Accounting: Tools and Methods"](https://iangow.github.io/far_book/).
 
 ## Installation
 
